--- a/package.json
+++ b/package.json
@@ -14,11 +14,12 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@emotion/react": "^11.11.0",
+    "@emotion/styled": "^11.11.0",
+    "@material-ui/core": "^4.12.4",
     "@mui/icons-material": "^5.11.16",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "@emotion/react": "^11.11.0",
-    "@emotion/styled": "^11.11.0",
     "yarn": "^1.22.19"
   },
   "devDependencies": {
